fix(StreetView): z-index of slice/boundary

--- a/client/src/app/StreetView.css
+++ b/client/src/app/StreetView.css
@@ -36,6 +36,9 @@
   text-align: left;
   touch-action: pan-x;
   border-bottom: 5px solid var(--background-earth-color);
+
+  /* make sure these elements are z-indexed above bounbaries */
+  z-index: 10;
 }
 
 #street-section-canvas {
